gcc/testsuite/g++.dg/lookup/missing-std-include-4.C
std::complex<int> c;		// { dg-error "" }
// { dg-message "#include <complex>" "" { target *-*-* } .-1 }
